--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textColor="#3867e5"
+
          />
 
 </RelativeLayout>
@@ -183,7 +184,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:background="@android:color/holo_red_light"
+            android:background="@drawable/mybutton2"
             android:layout_marginRight="8dp"
             android:fontFamily="sans-serif-medium"
             android:onClick="palomo"
@@ -198,7 +199,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:background="@android:color/holo_blue_light"
+            android:background="@drawable/mybutton"
             android:layout_marginLeft="8dp"
             android:fontFamily="sans-serif-medium"
             android:onClick="siguiente"
