--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -149,7 +149,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:background="@android:color/holo_blue_light"
+            android:background="@drawable/mybutton"
             android:fontFamily="sans-serif-medium"
             android:onClick="siguiente"
             android:text="@string/btnGameSiguiente"
