--- a/app/src/main/res/layout/ganador.xml
+++ b/app/src/main/res/layout/ganador.xml
@@ -19,7 +19,7 @@
         android:gravity="center"
         android:text="@string/titleGanador"
         android:textSize="60sp"
-        android:fontFamily="sans-serif"
+        android:fontFamily=""
         android:textColor="#f36e21"
         android:layout_margin="16dp"
         />
@@ -69,7 +69,7 @@
         android:textSize="20sp"
         android:layout_marginLeft="16dp"
         android:textColor="@android:color/white"
-        android:background="@android:color/holo_red_light"
+        android:background="@drawable/mybutton2"
         android:onClick="volver"
         />
 
