--- a/app/src/main/res/layout/menu2.xml
+++ b/app/src/main/res/layout/menu2.xml
@@ -35,7 +35,7 @@
                 android:id="@+id/twitter"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:onClick="instrucciones"
+
                 android:scaleType="centerInside"
                 android:src="@drawable/twitterlogo" />
 
@@ -43,7 +43,7 @@
                 android:id="@+id/instagram"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:onClick="instrucciones"
+
                 android:scaleType="centerInside"
                 android:src="@drawable/instalogo" />
 
@@ -52,7 +52,7 @@
                 android:id="@+id/facebook"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:onClick="opciones"
+
                 android:scaleType="centerInside"
                 android:src="@drawable/facebooklogo"/>
 
@@ -65,7 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:background="@android:color/holo_blue_light"
+            android:background="@drawable/mybutton"
             android:fontFamily="sana-serif-light"
             android:onClick="jugarRapido"
             android:text="@string/btnMenu"
@@ -79,7 +79,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:background="@android:color/holo_blue_light"
+            android:background="@drawable/mybutton"
             android:fontFamily="sana-serif-light"
             android:onClick="jugar"
             android:text="@string/btnMenu2"
@@ -103,28 +103,24 @@
             android:orientation="horizontal">
 
 
-
-
-            <ImageView
-                android:id="@+id/instruciones"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
-                android:layout_weight="0.3"
-                android:onClick="instrucciones"
-                android:scaleType="centerInside"
-                android:src="@drawable/instrucciones"
-                android:textAllCaps="false" />
-
-
             <ImageView
                 android:id="@+id/opciones"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.3"
+                android:layout_weight="1"
                 android:onClick="opciones"
                 android:scaleType="centerInside"
                 android:src="@drawable/opciones"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white" />
+
+            <ImageView
+                android:id="@+id/webpage"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:scaleType="centerInside"
+                android:src="@drawable/webpage"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white" />
 
