--- a/app/src/main/res/layout/tablero.xml
+++ b/app/src/main/res/layout/tablero.xml
@@ -12,8 +12,15 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_margin="6dp"
-        android:background="@android:color/holo_blue_light">
-
+        android:background="#cc3799e5">
+<TextView
+    android:id="@+id/title1234"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/jugadores"
+    android:gravity="center"
+    android:textSize="30dp"
+    android:textColor="#F5CB5C"/>
 
     <ListView
 
