--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -6,7 +6,7 @@
 
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="33dp"
     android:orientation="horizontal"
     android:background="#FFFFFF"
     >
@@ -37,7 +37,7 @@
         android:text="Alexander"
         android:fontFamily="sans-serif-medium"
         android:textColor="@android:color/black"
-        android:textSize="24sp" />
+        android:textSize="20sp" />
     <RelativeLayout
         android:layout_width="0dp"
 
